--- a/mywork02.html
+++ b/mywork02.html
@@ -191,7 +191,9 @@ h1{margin: 0px auto;}
 	left: 0px;
 }
 .listNum{
+	margin: 0px auto;
 	padding: 0px 5px;
+	font-size: 20px;
 	display: block;
 }
 #toDoList ul{margin: 0px auto; padding-left: 0px; list-style: none;}
