--- a/mywork02.html
+++ b/mywork02.html
@@ -203,7 +203,6 @@ h1{margin: 0px auto;}
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	padding-left: 5px;
 	cursor: pointer;
 	background-color: #FFBB77;
 }
@@ -211,8 +210,8 @@ h1{margin: 0px auto;}
 #toDoList li:hover{background-color: #EA7500;}
 .unclosed{display: block}
 .closed{display: none;}
-.unfinished{margin: 0px; height: 100%;}
-.finished{margin: 0px; height: 100%; background-color: #EA7500; color: gray; text-decoration: line-through;}
+.unfinished{margin: 0px; padding-left: 5px; height: 100%;}
+.finished{margin: 0px; padding-left: 5px; height: 100%; background-color: #EA7500; color: gray; text-decoration: line-through;}
 .closeBtn{
 	position: absolute;
 	right: 0px; top: 0px;
