--- a/mywork02.html
+++ b/mywork02.html
@@ -193,6 +193,8 @@ h1{margin: 0px auto;}
 .listNum{
 	margin: 0px auto;
 	padding: 0px 5px;
+	height: 30px;
+	line-height: 30px;
 	font-size: 20px;
 	display: block;
 }
@@ -203,6 +205,8 @@ h1{margin: 0px auto;}
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	height: 30px;
+	line-height: 30px;
 	cursor: pointer;
 	background-color: #FFBB77;
 }
