--- a/mywork02.html
+++ b/mywork02.html
@@ -325,6 +325,7 @@ h1{margin: 0px auto;}
 		</div>
 	</div>
 <script type="text/javascript">
+localstorage.todolist=document.getElementById("toDoList");
 //每个li右边加删除按钮
 var myList=document.getElementsByTagName("LI");
 var m;
