--- a/mywork02.html
+++ b/mywork02.html
@@ -379,8 +379,8 @@ function toClose(){
 //因为只有运行一次才能更新一次变量
 toAddCloseBtnForOldTask();
 toAddNumDivForOldTask();
+toFinishOrToUnfinish();
 toAddNum();
-toFinishOrToUnfinish()
 toClose();
 //点击Add按钮添加新事项
 function addNewItem() {
