--- a/mywork02.html
+++ b/mywork02.html
@@ -212,6 +212,7 @@ h1{margin: 0px auto;}
 	position: absolute;
 	left: -5px; top: 0px;
 	padding: 0px 5px;
+	width: 15px;
 	text-align: right;
 }
 @media all and (max-width: 1081px)
