--- a/mywork01.html
+++ b/mywork01.html
@@ -3,161 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <link rel='stylesheet' type='text/css' href='topstyles.css'>
 <title>Jenny's blog</title>
 <style>
-html{width: 100%;
-	height: 100%;
-	background-color: #d0d0d0;
-}
-body{width: 1080px;
-	max-width: 100%;
-	min-width: 320px;
-	height: 100%;
-	margin: 0px auto;
-	text-align: center;
-}
-.subBody{
-	position: relative;
-	width: 900px;
-	min-height: 100%;
-	height: auto;
-	margin: 0px auto;
-	background-color: #FFFACD;
-	box-shadow: 0px 0px 20px black;
-	z-index: 0;
-}
-.upperPart{
-	position: relative;
-	width: 100%;
-	height: 150px;
-	margin: 0px auto;
-	background-color: #FFFACD;
-	z-index: 0;
-}
-.myHeaderPhoto{
-	position: relative;
-	top: 15px;
-	width: 120px;
-	height: 120px;
-	border-radius: 60px;
-	box-shadow: 0px 0px 10px black;
-	overflow: hidden;
-	display: inline-block;
-}
-.myHeaderPhoto img{
-	position: absolute;
-	top: -33px;
-	left: -17px;
-	width: 280px;
-}
-.myHeaderText{
-	position: relative;
-	top: -20px;
-	height: 120px;
-	display: inline-block;
-}
-.myHeaderText p{
-	margin: 0px;
-	font-size: 50px;
-	line-height: 120px;
-	color: #9e0500;
-	font-weight: bold;
-	text-shadow: 0px 2px 4px #ffc107;
-}
-.menuBar{
-	width: 930px;
-	height: 60px;
-	margin: 0px 0px 0px -15px;
-	text-align: center;
-	background-color: 	#F75000;
-	z-index: 2;
-}
-.menuBar:before, .menuBar:after{
-	content:"";
-	position: absolute;
-	width: 917px;
-	height: 40px;
-	top: 161px;
-	bottom: 22px;
-	background: transparent;
-	z-index: -1;
-}
-.menuBar:before{
-	right:-5px;
-	box-shadow: 4px 7px 10px #5B5B5B;
-	transform: skew(-5deg) rotate(-1deg);
-}
-.menuBar:after{
-	left: -5px;
-	box-shadow: -4px 7px 10px #5B5B5B;
-	transform: skew(5deg) rotate(1deg);
-}
-.menuBarQuater{
-	position: relative;
-	display: inline-block;
-	text-align: center;
-	width: 24%;
-	margin: 0px;
-	padding: 0px;
-	cursor: pointer;
-}
-.menuBarText{
-	display: inline-block;
-	width: 100%;
-	height: 40px;
-	color: white;
-	margin: 10px auto 10px auto;
-	padding: 0px;
-	text-align: center;
-}
-.menuBarText p{
-	line-height: 40px;
-	font-size: 18px;
-	margin: 0px;
-}
-.menuDropDown{
-	position: absolute;
-	left: 0px;
-	width: 100%;
-	margin: 0px auto;
-	padding: 18px 0px;
-	border: none;
-	background-color: white;
-	text-align: center;
-	line-height: 13px;
-	box-shadow: 0px 1px 5px gray;
-	cursor: default;
-	display: none;
-	z-index: 2;
-}
-.menuDropDown a:link{text-decoration: none; color: blue;}
-.menuDropDown a:visited{color: blue;}
-.menuDropDown a:active{color: green;}
-.menuDropDown a:hover{color: blue;}
-.menuBarQuater:hover{
-	background-color: #FFAD86;
-}
-.menuBarQuater:hover .menuDropDown{
-	display: block;
-}
-.menuBarQuater:hover > .menuBarText{
-	color: black;
-}
-.middlePart{
-	position: relative;
-	width: 100%;
-	height: 35px;
-	margin: 0px auto;
-	padding: 0px;
-}
-.lowerPart{
-	position: relative;
-	width: 100%;
-	margin: 0px auto;
-	padding: 0px 0px 30px 0px;
-	text-align: center;
-	z-index: 1;
-}
 .Calc{
 	-moz-user-select:none;
 	-webkit-user-select:none;
@@ -186,18 +34,9 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 #Back{font-size:30px;}
 
 @media all and (max-width: 1081px)
-{
-	body, .subBody, .menuBar{width: 100%; margin: 0px;}
-	.menuBar:before, .menuBar:after{display: none;}
-}
+{}
 @media all and (max-width: 800px)
-{
-	.menuBarQuater:nth-child(3) .menuDropDown, .menuBarQuater:nth-child(4) .menuDropDown{
-		left: auto;
-		right: 0px;
-	}
-	.menuDropDown{width: 200px;}
-}
+{}
 @media all and (max-width: 600px)
 {
 	.number,.function,.result{
@@ -211,10 +50,6 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 }
 @media all and (max-width: 485px)
 {
-	.myHeaderPhoto{top: 25px; width: 100px; height: 100px; border-radius: 50px;}
-	.myHeaderPhoto img{width: 240px; top: -30px; left: -15px;}
-	.myHeaderText{top: -8px;}
-	.myHeaderText p{font-size: 40px;}
 	.number,.function,.result{
 	 width:45px; height:45px;
 	 font-size:30px;line-height:30px; 
@@ -226,13 +61,6 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 }
 @media all and (max-width: 400px)
 {
-	.upperPart{height: 120px;}
-	.myHeaderPhoto{top: 15px; width: 90px; height: 90px; border-radius: 45px;}
-	.myHeaderPhoto img{width: 220px; top: -30px; left: -15px;}
-	.myHeaderText{top: -15px;}
-	.myHeaderText p{font-size: 33px;}
-	.menuBarQuater{width: 23%;}
-	.menuBarText p{font-size: 16px;}
 	.number,.function,.result{
 	 width:42px; height:42px;
 	 font-size:28px;line-height:28px; 
@@ -249,7 +77,7 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 	<div class="subBody">
 		<div class="upperPart">
 			<div class="myHeaderPhoto">
-				<img src="photo/index-01.jpg" alt="myHeaderPhoto"/>
+				<img src="photo/j.hou.jpg" alt="myHeaderPhoto"/>
 			</div>
 			<div class="myHeaderText">
 				<p>Jenny 的 小 站</p>
