--- a/mywork02.html
+++ b/mywork02.html
@@ -3,162 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <link rel='stylesheet' type='text/css' href='topstyles.css'>
 <title>Jenny's blog</title>
 <style>
-html{width: 100%;
-	height: 100%;
-	background-color: #d0d0d0;
-}
-body{width: 1080px;
-	max-width: 100%;
-	min-width: 320px;
-	height: 100%;
-	margin: 0px auto;
-	text-align: center;
-}
-h1{margin: 0px auto;}
-.subBody{
-	position: relative;
-	width: 900px;
-	min-height: 100%;
-	height: auto;
-	margin: 0px auto;
-	background-color: #FFFACD;
-	box-shadow: 0px 0px 20px black;
-	z-index: 0;
-}
-.upperPart{
-	position: relative;
-	width: 100%;
-	height: 150px;
-	margin: 0px auto;
-	background-color: #FFFACD;
-	z-index: 0;
-}
-.myHeaderPhoto{
-	position: relative;
-	top: 15px;
-	width: 120px;
-	height: 120px;
-	border-radius: 60px;
-	box-shadow: 0px 0px 10px black;
-	overflow: hidden;
-	display: inline-block;
-}
-.myHeaderPhoto img{
-	position: absolute;
-	top: -33px;
-	left: -17px;
-	width: 280px;
-}
-.myHeaderText{
-	position: relative;
-	top: -20px;
-	height: 120px;
-	display: inline-block;
-}
-.myHeaderText p{
-	margin: 0px;
-	font-size: 50px;
-	line-height: 120px;
-	color: #9e0500;
-	font-weight: bold;
-	text-shadow: 0px 2px 4px #ffc107;
-}
-.menuBar{
-	width: 930px;
-	height: 60px;
-	margin: 0px 0px 0px -15px;
-	text-align: center;
-	background-color: 	#F75000;
-	z-index: 2;
-}
-.menuBar:before, .menuBar:after{
-	content:"";
-	position: absolute;
-	width: 917px;
-	height: 40px;
-	top: 161px;
-	bottom: 22px;
-	background: transparent;
-	z-index: -1;
-}
-.menuBar:before{
-	right:-5px;
-	box-shadow: 4px 7px 10px #5B5B5B;
-	transform: skew(-5deg) rotate(-1deg);
-}
-.menuBar:after{
-	left: -5px;
-	box-shadow: -4px 7px 10px #5B5B5B;
-	transform: skew(5deg) rotate(1deg);
-}
-.menuBarQuater{
-	position: relative;
-	display: inline-block;
-	text-align: center;
-	width: 24%;
-	margin: 0px;
-	padding: 0px;
-	cursor: pointer;
-}
-.menuBarText{
-	display: inline-block;
-	width: 100%;
-	height: 40px;
-	color: white;
-	margin: 10px auto 10px auto;
-	padding: 0px;
-	text-align: center;
-}
-.menuBarText p{
-	line-height: 40px;
-	font-size: 18px;
-	margin: 0px;
-}
-.menuDropDown{
-	position: absolute;
-	left: 0px;
-	width: 100%;
-	margin: 0px auto;
-	padding: 18px 0px;
-	border: none;
-	background-color: white;
-	text-align: center;
-	line-height: 13px;
-	box-shadow: 0px 1px 5px gray;
-	cursor: default;
-	display: none;
-	z-index: 2;
-}
-.menuDropDown a:link{text-decoration: none; color: blue;}
-.menuDropDown a:visited{color: blue;}
-.menuDropDown a:active{color: green;}
-.menuDropDown a:hover{color: blue;}
-.menuBarQuater:hover{
-	background-color: #FFAD86;
-}
-.menuBarQuater:hover .menuDropDown{
-	display: block;
-}
-.menuBarQuater:hover > .menuBarText{
-	color: black;
-}
-.middlePart{
-	position: relative;
-	width: 100%;
-	height: 35px;
-	margin: 0px auto;
-	padding: 0px;
-}
-.lowerPart{
-	position: relative;
-	width: 100%;
-	margin: 0px auto;
-	padding: 0px 0px 30px 0px;
-	text-align: center;
-	z-index: 1;
-}
 .toDo{
 	position: relative;
 	margin: 0px auto 50px auto;
@@ -259,7 +106,7 @@ h1{margin: 0px auto;}
 	<div class="subBody">
 		<div class="upperPart">
 			<div class="myHeaderPhoto">
-				<img src="photo/index-01.jpg" alt="myHeaderPhoto"/>
+				<img src="photo/j.hou.jpg" alt="myHeaderPhoto"/>
 			</div>
 			<div class="myHeaderText">
 				<p>Jenny 的 小 站</p>
