--- a/mywork02.html
+++ b/mywork02.html
@@ -73,6 +73,7 @@
 @media all and (max-width: 485px)
 {
 	.toDo{width: 380px;}
+	#showAll, #hideAll{width: 23%;}
 }
 @media all and (max-width: 400px)
 {
@@ -134,6 +135,10 @@
 					<input type="text" id="addText" placeholder="Create a new task..."/>
 					<button type="button" id="addBtn" onclick="addNewItem()">Add</button>
 				</div>
+				<div class="addItem">
+					<button type="button" id="showAll" onclick="toShowAll()">Show All</button>
+					<button type="button" id="hideAll" onclick="toHideAll()">Hide All</button>
+				</div>
 				<div id="toDoList">
 					<ul id="myListUl">
 						<li class="unclosed"><p class="finished">item01</p></li>
@@ -186,9 +191,11 @@ function toFinishOrToUnfinish(){
 		if (ev.target.className === 'unfinished') {
 		ev.target.className='finished';
 		}
-		else{ev.target.className='unfinished'}
+		else if(ev.target.className === 'finished'){
+			ev.target.className='unfinished'
+		}
+		else{return;}
 	}, false);
-	console.log('toFinishOrToUnfinish');
 }
 //点击删除按钮关闭(隐藏)事项
 function toClose(){
@@ -250,6 +257,22 @@ function toEnter(){
 	}, false);
 }
 toEnter();
+//显示全部
+function toShowAll(){
+	var liList=document.getElementsByTagName("LI");
+	var aa;
+	for(aa=0; aa < liList.length; aa++){
+		liList[aa].className = "unclosed";
+		toAddNum();
+	}
+}
+function toHideAll(){
+	var liList=document.getElementsByTagName("LI");
+	var aa;
+	for(aa=0; aa < liList.length; aa++){
+		liList[aa].className = "closed";
+	}
+}
 </script>
 </body>
 
