--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
 				<p>Jenny 的 小 站</p>
 			</div>
 		</div>
-		<div class="menuBar">
+		<div class="menuBar" id="float_menubar">
 			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
@@ -62,11 +62,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			
 	</div>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
