--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<p>Jenny 的 小 站</p>
 			</div>
 		</div>
-		<div class="menuBar">
+		<div class="menuBar" id="float_menubar">
 			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			<div class="myPhoto">
@@ -247,5 +247,5 @@
 		</div>
 	</div>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
