--- a/mywork.html
+++ b/mywork.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <link rel='stylesheet' type='text/css' href='topstyles.css'>
+	<link rel='stylesheet' type='text/css' href='topstyles.css'>
 <title>Jenny's blog</title>
 <style>
 @media all and (max-width: 1081px)
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			<ul class="myList">
@@ -72,5 +72,5 @@
 		</div>
 	</div>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
