--- a/mywork01.html
+++ b/mywork01.html
@@ -117,7 +117,7 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			<table class="Calc" id="Calc">
@@ -269,5 +269,5 @@ lowerhalf.innerText="输入错误";
 <!---------清除结束--------->
 </script>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
