--- a/mywork02.html
+++ b/mywork02.html
@@ -126,7 +126,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			<h1>To-do List</h1>
@@ -275,5 +275,5 @@ function toHideAll(){
 }
 </script>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
