--- a/useful.html
+++ b/useful.html
@@ -62,11 +62,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart">
+		<div class="middlePart" id="myIntro">
 		</div>
 		<div class="lowerPart">
 			
 	</div>
 </body>
-
+<script src="topjs.js" type="text/javascript"></script>
 </html>
