--- a/mywork03.html
+++ b/mywork03.html
@@ -84,6 +84,7 @@
 				</div>
 			</div>
 		</div>
+		<div id="myIntro"></div>
 		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
