--- a/aboutme.html
+++ b/aboutme.html
@@ -62,11 +62,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart" id="myIntro">
+		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
 			
 	</div>
 </body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
