--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart" id="myIntro">
+		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
 			<div class="myPhoto">
@@ -247,5 +247,6 @@
 		</div>
 	</div>
 </body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
