--- a/mywork.html
+++ b/mywork.html
@@ -28,7 +28,7 @@
 				<p>Jenny 的 小 站</p>
 			</div>
 		</div>
-		<div class="menuBar">
+		<div class="menuBar" id="float_menubar">
 			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
@@ -62,15 +62,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart" id="myIntro">
+		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
 			<ul class="myList">
 				<li><a href="mywork01.html" target="_self">JavaScript计算器</a></li>
 				<li><a href="mywork02.html" target="_self">To-Do List</a></li>
+				<li><a href="mywork03.html" target="_self">whole-page introduction</a></li>
 			</ul>
 		</div>
 	</div>
 </body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
