--- a/mywork01.html
+++ b/mywork01.html
@@ -83,7 +83,7 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 				<p>Jenny 的 小 站</p>
 			</div>
 		</div>
-		<div class="menuBar">
+		<div class="menuBar" id="float_menubar">
 			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
@@ -117,7 +117,7 @@ text-align:right;font-size:38px;word-wrap:break-word;word-break:break-all;
 				</div>
 			</div>
 		</div>
-		<div class="middlePart" id="myIntro">
+		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
 			<table class="Calc" id="Calc">
@@ -269,5 +269,6 @@ lowerhalf.innerText="输入错误";
 <!---------清除结束--------->
 </script>
 </body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
