--- a/mywork02.html
+++ b/mywork02.html
@@ -92,7 +92,7 @@
 				<p>Jenny 的 小 站</p>
 			</div>
 		</div>
-		<div class="menuBar">
+		<div class="menuBar" id="float_menubar">
 			<div class="menuBarQuater" onmouseover="">
 				<div class="menuBarText">
 					<p>我的主页</p>
@@ -126,7 +126,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="middlePart" id="myIntro">
+		<div class="middlePart" id="float_middlePart">
 		</div>
 		<div class="lowerPart">
 			<h1>To-do List</h1>
@@ -275,5 +275,6 @@ function toHideAll(){
 }
 </script>
 </body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
