--- a/mywork01.html
+++ b/mywork01.html
@@ -269,6 +269,6 @@ lowerhalf.innerText="输入错误";
 <!---------清除结束--------->
 </script>
 </body>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
