--- a/mywork02.html
+++ b/mywork02.html
@@ -275,6 +275,6 @@ function toHideAll(){
 }
 </script>
 </body>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
