--- a/useful.html
+++ b/useful.html
@@ -68,6 +68,6 @@
 			
 	</div>
 </body>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
