--- a/mywork03.html
+++ b/mywork03.html
@@ -4,9 +4,12 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/1.7.3/less.min.js"></script>-->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.gdgdocs.org/css?family=Lobster">
 	<link rel="stylesheet" type="text/css" href="https://houzhenni.github.io/topstyles.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <style>
@@ -18,7 +21,10 @@
 .myIntro_text{margin: 20px; font-size: 18px; text-align: left;}
 .myPortfolio{padding-bottom: 10px;}
 .myPortfolio div{margin: 20px; width: 40%; display: inline-block;}
-.photo_margin_20{margin: 20;}
+@media all and (max-width: 1080px)
+{
+	.myIntro_text{margin: 10px 10px 20px 10px;}
+}
 @media all and (max-width: 768px)
 {
 	.myPortfolio div{margin: 10px;}
@@ -30,7 +36,6 @@
 }
 @media all and (max-width: 485px)
 {
-	.myIntro_text{margin: 10px;}
 	.myPortfolio div{width: 80%;}
 }
 </style>
@@ -62,7 +67,7 @@
 					<p>Skills</p>
 				</div>
 				<div class="menuDropDown">
-					<a href="#" target="_blank">What I can do</a>
+					<a href="#mySkills" target="_blank">What I can do</a>
 				</div>
 			</div>
 			<div class="menuBarQuater" onmouseover="">
@@ -80,7 +85,7 @@
 					<p>Contact</p>
 				</div>
 				<div class="menuDropDown">
-					<a href="#" target="_blank">You can find me here</a>
+					<a href="#myContact" target="_blank">You can find me here</a>
 				</div>
 			</div>
 		</div>
@@ -91,7 +96,47 @@
 			<div class="lowerInnerPart">
 				<div class="panel panel-default">
 					<h3>Jenny HOU</h3>
-					
+					<div class="row myIntro_text">
+						<div class="col-sm-8 col-md-8">
+							<div class="thumbnail" style="margin-bottom: 0px;">
+								<img class="img-responsive" src="https://houzhenni.github.io/photo/index-04.jpg" alt="picture of me" />
+							</div>
+						</div>
+						<div class="col-sm-4 col-md-4">
+							<div class="myIntro_text">
+								<p>Customer support for IT company, with passion to learn various programming languages</p>
+								<hr style="border-top-color: black;"/>
+								<p>
+									Front-end developer on the way
+									<br/>
+									Chi/Jap/Eng Translator
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<p id="mySkills">&nbsp;</p>
+				<p>&nbsp;</p>
+				<div class="panel panel-default">
+					<h3>My Skills</h3>
+					<div class="row myIntro_text">
+						<div class="col-sm-8 col-md-8 col-md-push-4 col-sm-push-4">
+							<div class="thumbnail" style="margin-bottom: 0px;">
+								<img class="img-responsive" src="https://houzhenni.github.io/photo/index-04.jpg" alt="picture of me" />
+							</div>
+						</div>
+						<div class="col-sm-4 col-md-4 col-md-pull-8 col-sm-pull-8">
+							<div class="myIntro_text">
+								<p>Customer support for IT company, with passion to learn various programming languages</p>
+								<hr style="border-top-color: black;"/>
+								<p>
+									Front-end developer on the way
+									<br/>
+									Chi/Jap/Eng Translator
+								</p>
+							</div>
+						</div>
+					</div>
 					<div class="row myIntro_text">
 						<div class="col-sm-8 col-md-8">
 							<div class="thumbnail" style="margin-bottom: 0px;">
@@ -130,10 +175,29 @@
 						</div>
 					</div>
 				</div>
+				<p id="myContact">&nbsp;</p>
+				<p>&nbsp;</p>
+				<div class="panel panel-default">
+					<h3>Contact Me</h3>
+					<div class="row myIntro_text">
+						<div class="myIntro_text">
+							<i class="fa fa-4x fa-github-square"></i>
+						</div>
+						<div class="myIntro_text">
+							<i class="fa-github-alt"></i>
+						</div>
+						<div class="myIntro_text">
+							<i class="icon-carmera-retro icon-4x"></i>
+						</div>
+						<div class="myIntro_text">
+							<i class="icon-carmera-retro icon-4x"></i>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+
 <script src="topjs.js" type="text/javascript"></script>
 </html>
