--- a/mywork03.html
+++ b/mywork03.html
@@ -24,6 +24,7 @@
 .myPortfolio div:hover {box-shadow: 0px 0px 5px gray;}
 .centered{text-align: center;}
 .contactBtn{width: 20%; margin: 10px auto; display: inline-block;}
+.contactBtn a{text-decoration: none;}
 .contactBtn span{font-size: 21px;}
 @media all and (max-width: 1080px)
 {
