--- a/mywork03.html
+++ b/mywork03.html
@@ -23,8 +23,8 @@
 .myPortfolio div{margin: 20px; width: 40%; display: inline-block;}
 .myPortfolio div:hover {box-shadow: 0px 0px 5px gray;}
 .centered{text-align: center;}
+.centered a{text-decoration: none;}
 .contactBtn{width: 20%; margin: 10px auto; display: inline-block;}
-.contactBtn a{text-decoration: none;}
 .contactBtn span{font-size: 21px;}
 @media all and (max-width: 1080px)
 {
