--- a/mywork03.html
+++ b/mywork03.html
@@ -206,13 +206,13 @@
 					<div class="panel panel-default">
 						<h3>Contact Me</h3>
 						<div class="row myIntro_text centered">
-							<a href="https://houzhenni.github.io" target="_blank">
+							<a href="https://github.com/houzhenni">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-github-square"></i>
 									<span>Github</span>
 								</button>
 							</a>
-							<a href="https://codepen.io/houzhenni" target="_blank">
+							<a href="https://codepen.io/houzhenni">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-codepen"></i>
 									<span>Codepen</span>
@@ -224,7 +224,7 @@
 									<span>Email</span>
 								</button>
 							</a>
-							<a href="https://facebook.com/jenny.hou.1048" target="_blank">
+							<a href="https://facebook.com/jenny.hou.1048">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-facebook"></i>
 									<span>Facebook</span>
