--- a/mywork03.html
+++ b/mywork03.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -66,7 +65,7 @@
 						<p>About</p>
 					</div>
 					<div class="menuDropDown">
-						<a href="#myIntro" target="_blank">Who am I?</a>
+						<a href="#myIntro">Who am I?</a>
 					</div>
 				</div>
 				<div class="menuBarQuater" onmouseover="">
@@ -75,7 +74,7 @@
 						<p>Skills</p>
 					</div>
 					<div class="menuDropDown">
-						<a href="#mySkills" target="_blank">What I can do</a>
+						<a href="#mySkills">What I can do</a>
 					</div>
 				</div>
 				<div class="menuBarQuater" onmouseover="">
@@ -84,7 +83,7 @@
 						<p>Portfolio</p>
 					</div>
 					<div class="menuDropDown">
-						<a href="#myPortfolio" target="_blank">Projects accomplished</a>
+						<a href="#myPortfolio">Projects accomplished</a>
 					</div>
 				</div>
 				<div class="menuBarQuater" onmouseover="">
@@ -93,7 +92,7 @@
 						<p>Contact</p>
 					</div>
 					<div class="menuDropDown">
-						<a href="#myContact" target="_blank">You can find me here</a>
+						<a href="#myContact">You can find me here</a>
 					</div>
 				</div>
 			</div>
@@ -206,13 +205,13 @@
 					<div class="panel panel-default">
 						<h3>Contact Me</h3>
 						<div class="row myIntro_text centered">
-							<a href="https://github.com/houzhenni">
+							<a href="https://houzhenni.github.io" target="_blank">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-github-square"></i>
 									<span>Github</span>
 								</button>
 							</a>
-							<a href="https://codepen.io/houzhenni">
+							<a href="https://codepen.io/houzhenni" target="_blank">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-codepen"></i>
 									<span>Codepen</span>
@@ -224,7 +223,7 @@
 									<span>Email</span>
 								</button>
 							</a>
-							<a href="https://facebook.com/jenny.hou.1048">
+							<a href="https://facebook.com/jenny.hou.1048" target="_blank">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-facebook"></i>
 									<span>Facebook</span>
