--- a/mywork03.html
+++ b/mywork03.html
@@ -12,6 +12,7 @@
 </head>
 
 <style>
+body{min-width: 320px;}
 .myHeaderText{font-family: Lobster;}
 .menuBarQuater{font-family: Microsoft Yahei;}
 .menuDropDown a{font-family: Times New Roman; font-weight: bold;}
