--- a/mywork03.html
+++ b/mywork03.html
@@ -140,11 +140,11 @@ body{min-width: 320px;}
 									<p>
 										Mandarin(Native)
 										<br/>
-										Japanese(Proficient)
+										Japanese(Fluent)
 										<br/>
-										English(Proficient)
+										English(Fluent)
 										<br/>
-										Cantonese(Proficient)
+										Cantonese(Fluent)
 										<br/>
 										Korean(Fair)
 									</p>
@@ -154,7 +154,7 @@ body{min-width: 320px;}
 						<div class="row myIntro_text">
 							<div class="col-sm-8 col-md-8">
 								<div class="thumbnail" style="margin-bottom: 0px;">
-									<img class="img-responsive" src="http://www.ikozmik.com/Content/html-css-javascript-tricks-for-mobile-websites/html-css-javascript-featured.jpg	" alt="programming languages" />
+									<img class="img-responsive" src="photo/front-end-languages.jpg" alt="programming languages" />
 								</div>
 							</div>
 							<div class="col-sm-4 col-md-4">
@@ -190,13 +190,13 @@ body{min-width: 320px;}
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="#" target="_blank">
+								<a href="https://codepen.io/houzhenni/pen/wPrBeR" target="_blank">
 									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.wPrBeR.33a5b748-e9c1-496a-9083-b32c56b89922.png" alt="timetable of Jay Chou's concert" />
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="#" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.xXLqxe.84f507d6-3a92-4eda-8989-115dec7396ed.png" alt="JavaScript Calculator" />
+								<a href="https://codepen.io/houzhenni/pen/xXLqxe" target="_blank">
+									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.xXLqxe.84f507d6-3a92-4eda-8989-115dec7396ed.png" alt="a JavaScript calculator" />
 								</a>
 							</div>
 						</div>
