--- a/mywork03.html
+++ b/mywork03.html
@@ -206,7 +206,7 @@ body{min-width: 320px;}
 					<div class="panel panel-default">
 						<h3>Contact Me</h3>
 						<div class="row myIntro_text centered">
-							<a href="https://houzhenni.github.io" target="_blank">
+							<a href="https://www.github.com/houzhenni" target="_blank">
 								<button type="button" class="btn btn-danger contactBtn">
 									<i class="fa fa-2x fa-github-square"></i>
 									<span>Github</span>
