--- a/mywork03.html
+++ b/mywork03.html
@@ -26,9 +26,25 @@ body{min-width: 320px;}
 .centered a{text-decoration: none;}
 .contactBtn{width: 20%; margin: 10px auto; display: inline-block;}
 .contactBtn span{font-size: 21px;}
+.noDecorLink{text-decoration: none;}
+#backToIndex{
+	position: fixed;
+	bottom: 20px;
+	right: 10%;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: #F75000;
+	color: white;
+	font-size: 19px;
+	line-height: 50px;
+	text-align: center;
+	box-shadow: 0px 0px 5px black;
+}
 @media all and (max-width: 1080px)
 {
 	.myIntro_text{margin: 10px 10px 20px 10px;}
+	#backToIndex{right: 5%;}
 }
 @media all and (max-width: 768px)
 {
@@ -45,6 +61,7 @@ body{min-width: 320px;}
 	.myPortfolio div{width: 80%;}
 	.contactBtn i{font-size: 18px;}
 	.contactBtn span{font-size: 15px;}
+	#backToIndex{right: 1%;}
 }
 </style>
 
@@ -235,6 +252,11 @@ body{min-width: 320px;}
 				</div>
 			</div>
 		</div>
+		<a class="noDecorLink" href="index.html" target="_self">
+			<div id="backToIndex">
+				Back
+			</div>
+		</a>
 	</body>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
