--- a/mywork04.html
+++ b/mywork04.html
@@ -57,8 +57,8 @@
 		</div>
 		<div class="lowerPart">
 			<h1>求斐波那契数列的值</h1>
-      <br>
-			<div style="width: 100%; margin: 0px auto;">
+			<br>
+			<div style="width: 100%; margin: 10px; text-align: left;">
 				<div>
 					<p>递归法求斐波那契数列的值</p>
 					<pre style="background: #f0f0f0;">
