--- a/mywork04.html
+++ b/mywork04.html
@@ -7,6 +7,7 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <title>Jenny's blog</title>
 <style>
+pre{overflow-x: scroll;}
 </style>
 
 <body>
