--- a/mywork04.html
+++ b/mywork04.html
@@ -9,7 +9,8 @@
 <style>
 pre{overflow-x: scroll;}
 </style>
-
+.lowerInnerPart{text-align: left;}
+.lowerInnerPart h1{text-align: center;}
 <body>
 	<div class="subBody">
 		<div class="upperPart">
