--- a/mywork04.html
+++ b/mywork04.html
@@ -7,9 +7,10 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <title>Jenny's blog</title>
 <style>
-pre{overflow-x: scroll;}
 .lowerInnerPart{text-align: left;}
 .lowerInnerPart h1{text-align: center;}
+.lowerInnerPart pre{overflow-x: scroll; background: #f0f0f0;}
+.lowerInnerPart hr{border: 1px solid black;}
 </style>
 
 <body>
@@ -64,27 +65,33 @@ pre{overflow-x: scroll;}
 			<br>
 			<div>
 				<p>递归法求斐波那契数列的值</p>
-				<pre style="background: #f0f0f0;">
+				<pre>
 					<code>
 function fibRecurse(n){
 	if(n>1){
 		return fibRecurse(n-1)+fibRecurse(n-2);
 	}
 	else {return n;}
-}
-					</code>
+}</code>
 				</pre>
-				<span>行数:&nbsp;</span>
+				<span>项数:&nbsp;</span>
 				<input type="text" style="width: 150px;" id="recurseNth"/>
 				<button type="button" id="recurseCalculate">求值</button>
 				<br><br>
 				<span>值:&nbsp;</span>
-				<input id="recurseResult" type="text" style="width: 250px;"/>
+				<input id="recurseResult" type="text" style="width: 230px;"/>
 			</div>
+			<br>
+			<div>
+				<span>计算耗时</span>
+				<input id="recurseTime" type="text" style="width: 45px;"/>
+				<span>毫秒</span>
+			</div>
+			<br>
 			<hr>
 			<div>
 				<p>迭代法求斐波那契数列的值</p>
-				<pre style="background: #f0f0f0;">
+				<pre>
 					<code>
 function fibIterate(n){
 	var i, temp0, temp1=0, temp2=1;
@@ -99,15 +106,20 @@ function fibIterate(n){
 		}
 		return temp0;
 	}
-}
-					</code>
+}</code>
 				</pre>
-				<span>行数:&nbsp;</span>
+				<span>项数:&nbsp;</span>
 				<input type="text" style="width: 150px;" id="iterateNth"/>
 				<button type="button" id="iterateCalculate">求值</button>
 				<br><br>
 				<span>值:&nbsp;</span>
-				<input id="iterateResult" type="text" style="width: 250px;"/>
+				<input id="iterateResult" type="text" style="width: 230px;"/>
+			</div>
+			<br>
+			<div>
+				<span>计算耗时</span>
+				<input id="iterateTime" type="text" style="width: 45px;"/>
+				<span>毫秒</span>
 			</div>
 		</div>
 	</div>
@@ -136,40 +148,61 @@ function fibIterate(n){
 		return temp0;
 	}
 }
+
 //将递归法求得的值写入结果
 function toCalculateRecurse(){
-var $recurseNth=$("#recurseNth").val();
-if($recurseNth>44){
-	alert("递归法求45或以上的行数会导致浏览器崩溃，换一个数吧~");
-}
-else if($recurseNth>34){
-	if(confirm("递归法求35或以上的行数会非常慢，确定执行？")){
-	$("#recurseResult").val(fibRecurse($recurseNth));
+	var $recurseNth=$("#recurseNth").val();
+	var $recurseStart=new Date();
+	var $recurseEnd;
+	var $recurseTime;
+	if($recurseNth>42){
+		alert("递归法求42或以上的项数会导致浏览器崩溃，换一个数吧~");
 	}
-	else{return false;}
+	else if($recurseNth>34){
+		if(confirm("递归法求35或以上的项数会非常慢，确定执行？")){
+		$("#recurseResult").val(fibRecurse($recurseNth));
+		$recurseEnd=new Date();
+		$recurseTime=$recurseEnd-$recurseStart;
+		$("#recurseTime").val($recurseTime);
+		}
+		else{return false;}
+	}
+	else{
+		$("#recurseResult").val(fibRecurse($recurseNth));
+		$recurseEnd=new Date();
+		$recurseTime=$recurseEnd-$recurseStart;
+		$("#recurseTime").val($recurseTime);
+	}
 }
-else{$("#recurseResult").val(fibRecurse($recurseNth));}
-}
+
 //将迭代法求得的值写入结果
-function toCalculateIteration(){
-var $iterateNth=$("#iterateNth").val();
-$("#iterateResult").val(fibIterate($iterateNth));
+function toCalculateIterate(){
+	var $iterateNth=$("#iterateNth").val();
+	var $iterateStart=new Date();
+	var $iterateEnd;
+	var $iterateTime;
+	$("#iterateResult").val(fibIterate($iterateNth));
+	$iterateEnd=new Date();
+	$iterateTime=$iterateEnd-$iterateStart;
+	$("#iterateTime").val($iterateTime);
 }
 	
 $(document).ready(function(){
 	$("#recurseCalculate").on('click',toCalculateRecurse);//单击递归法的求值按钮
-	$("#iterateCalculate").on('click',toCalculateIteration);//单击迭代法的求值按钮
+	$("#iterateCalculate").on('click',toCalculateIterate);//单击迭代法的求值按钮
 	//递归法回车
-	$("#recurseNth").keydown(function(event){ 
-    if(event.keyCode == 13){ 
-        toCalculateRecurse();}
-    });
+	$("#recurseNth").keydown(function(event){
+		if(event.keyCode == 13){
+			toCalculateRecurse();}
+		});
 	//迭代法回车
-	$("#iterateNth").keydown(function(event){ 
-    if(event.keyCode == 13){ 
-        toCalculateIteration();}
-    });
+	$("#iterateNth").keydown(function(event){
+		if(event.keyCode == 13){
+			toCalculateIterate();}
+		});
 });
+
+
 </script>
 </body>
 <script src="topjs.js" type="text/javascript"></script>
