--- a/mywork.html
+++ b/mywork.html
@@ -68,7 +68,7 @@
 			<ul class="myList">
 				<li><a href="mywork01.html" target="_self">JavaScript计算器</a></li>
 				<li><a href="mywork02.html" target="_self">To-Do List</a></li>
-				<li><a href="mywork03.html" target="_self">whole-page introduction</a></li>
+				<li><a href="mywork03.html" target="_self">one-page introduction</a></li>
 				<li><a href="mywork04.html" target="_self">斐波那契数列求值</a></li>
 			</ul>
 		</div>
