--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	z-index: 0;
 }
 .myPhoto_big img{
-	margin: 0px; padding: 0px; max-width: 100%; visibility: visible; 
+	margin: 0px; padding: 0px; max-width: 100%; visibility: hidden; 
 }
 .myPhoto_thumb:nth-child(1):hover ~ .myPhoto_big:nth-child(7),
 .myPhoto_thumb:nth-child(2):hover ~ .myPhoto_big:nth-child(8),
