--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel='stylesheet' type='text/css' href='topstyles.css'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <title>Jenny's blog</title>
+</head>
 <style>
 .myPhoto{
 	position: relative;
@@ -252,6 +254,5 @@
 		</div>
 	</div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
