--- a/mywork.html
+++ b/mywork.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel='stylesheet' type='text/css' href='topstyles.css'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <title>Jenny's blog</title>
 <style>
 @media all and (max-width: 1081px)
@@ -70,10 +71,10 @@
 				<li><a href="mywork02.html" target="_self">To-Do List</a></li>
 				<li><a href="mywork03.html" target="_self">one-page introduction</a></li>
 				<li><a href="mywork04.html" target="_self">斐波那契数列求值</a></li>
+				<li><a href="mywork05.html" target="_self">Random Quote Machine</a></li>
 			</ul>
 		</div>
 	</div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script src="topjs.js" type="text/javascript"></script>
 </html>
