--- a/mywork03.html
+++ b/mywork03.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/1.7.3/less.min.js"></script>-->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.gdgdocs.org/css?family=Lobster">
 	<link rel="stylesheet" type="text/css" href="https://houzhenni.github.io/topstyles.css">
@@ -209,7 +208,7 @@ body{min-width: 320px;}
 							</div>
 							<div class="thumbnail">
 								<a href="https://codepen.io/houzhenni/pen/wPrBeR" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.wPrBeR.33a5b748-e9c1-496a-9083-b32c56b89922.png" alt="timetable of Jay Chou's concert" />
+									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.GyjzZb.small.e983a30f-7898-4b86-94aa-bb850a370b3e.png" alt="Random Quote Machine: Criminal Minds Season 3 Quotes" />
 								</a>
 							</div>
 							<div class="thumbnail">
