--- a/mywork03.html
+++ b/mywork03.html
@@ -198,22 +198,22 @@ body{min-width: 320px;}
 						<div class="myPortfolio">
 							<div class="thumbnail">
 								<a href="https://codepen.io/houzhenni/pen/wPrBeR" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.wPrBeR.33a5b748-e9c1-496a-9083-b32c56b89922.png" alt="timetable of Jay Chou's concert" />
+									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmYan.png" alt="timetable of Jay Chou's concert" />
 								</a>
 							</div>
 							<div class="thumbnail">
 								<a href="https://codepen.io/houzhenni/pen/xXLqxe" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.xXLqxe.84f507d6-3a92-4eda-8989-115dec7396ed.png" alt="a JavaScript calculator" />
+									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmt5q.png" alt="a JavaScript calculator" />
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="https://codepen.io/houzhenni/pen/wPrBeR" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.GyjzZb.small.e983a30f-7898-4b86-94aa-bb850a370b3e.png" alt="Random Quote Machine: Criminal Minds Season 3 Quotes" />
+								<a href="#" target="_blank">
+									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmUP0.png" alt="Random Quote Machine: Criminal Minds Season 3 Quotes" />
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="https://codepen.io/houzhenni/pen/xXLqxe" target="_blank">
-									<img class="img-responsive" src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1495785.xXLqxe.84f507d6-3a92-4eda-8989-115dec7396ed.png" alt="a JavaScript calculator" />
+								<a href="#" target="_blank">
+									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmt5q.png" alt="JavaScript Calculator" />
 								</a>
 							</div>
 						</div>
