--- a/mywork05.html
+++ b/mywork05.html
@@ -27,6 +27,20 @@ h1{margin: 25px; color: white;}
 #changeQuote{display: inline-block; float: right; background: white; color: white;}
 #shareQuote a{text-decoration: none;}
 #author{color: white; margin: 10px auto;}
+#backToIndex{
+	position: fixed;
+	bottom: 20px;
+	right: 10%;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: #F75000;
+	color: white;
+	font-size: 19px;
+	line-height: 50px;
+	text-align: center;
+	box-shadow: 0px 0px 5px black;
+}
 @media all and (max-width: 768px){
   #quoteTitle{margin-bottom: 10px; font-size: 25px;}
 }
