--- a/mywork.html
+++ b/mywork.html
@@ -72,6 +72,7 @@
 				<li><a href="mywork03.html" target="_self">one-page introduction</a></li>
 				<li><a href="mywork04.html" target="_self">斐波那契数列求值</a></li>
 				<li><a href="mywork05.html" target="_self">Random Quote Machine</a></li>
+				<li><a href="mywork06.html" target="_self">Wikipedia viewer</a></li>
 			</ul>
 		</div>
 	</div>
