--- a/mywork06.html
+++ b/mywork06.html
@@ -10,7 +10,7 @@ body{margin: 0px; background: #003333; text-align: center; min-width: 320px;}
 #randomWiki{margin: 130px auto 0px auto; color: white; font-size: 18px;}
 #randomWiki a{text-decoration: none; color: white;}
 #magnifier{position: relative; margin: 10px auto; height: 35px; width: 35px; background: #003333; border: 5px solid darkorange; border-radius: 33px; cursor: pointer;}
-#magnifierHandle{position: absolute; top: 38px; left: 27px;width: 22px; border: 2.5px solid darkorange; transform:rotate(45deg); z-index: -1;}
+#magnifierHandle{position: absolute; top: 40px; left: 27px; width: 22px; border-top: 5px solid darkorange; transform:rotate(45deg); z-index: -1;}
 #searchBox{margin: 10px auto; background: none; width: 35px; height: 35px; border: 5px solid darkorange; border-radius: 33px; display: none;}
 #searchContent{margin-top: 3px; margin-left: 6px; width: 82%; height: 20px; color: white; font-size: 18px; background: none; border: none; outline: none; display: none;}
 #closeIcon{margin-top: 3px; width: 5%; color: darkorange; font-size: 20px; cursor: pointer; display: none;}
@@ -98,7 +98,7 @@ $(document).ready(function() {
     function showMagnifier() {
       $("#searchBox").css("display", "none");
       $("#magnifier").css("display", "block");
-      $("#magnifierHandle").transition({ top: 38, left: 27 }, 200);
+      $("#magnifierHandle").transition({ top: 40, left: 27 }, 200);
       setTimeout('$("#randomWiki").transition({ marginTop: 130 }, 200)', 200);
       setTimeout('$("#desc").fadeIn(200)', 400);
     }
